fixed bug with link to viz page getting cut off in header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2361,7 +2361,7 @@
 			#banner {
 				width: 940px;
 				margin: 0 auto;
-				overflow: hidden;
+				/*overflow: hidden;*/
 				padding: 9em 0 6em 0;
 			}
 
@@ -2395,13 +2395,14 @@
 		/* Wrappers */
 
 			#header-wrapper {
-				padding: 2em 0 0 0;
+				padding: 0 0 2em 0;
+				/*padding: 2em 0 0 0;*/
 				/*height: 11em;*/
 			}
 
-/*			body.homepage #header-wrapper {
+			body.homepage #header-wrapper {
 				height: 40em;
-			}*/
+			}
 
 			#footer-wrapper {
 				padding: 0em 0 0em 0;
